--- a/html-youtube-tutorial-main/html-youtube-tutorial-main/CSS/style.css
+++ b/html-youtube-tutorial-main/html-youtube-tutorial-main/CSS/style.css
@@ -216,7 +216,7 @@ Combinators - explains the relationship between listed selectors
     + = general sibling
 
 */
-
+    
 /*
 pseudo-class - describes the change of behavior from one state to another
 
@@ -269,6 +269,56 @@ pagination - method by which a document is seperated into pages, an numbers are 
     cursor: pointer;
 }
 
+
+*/
+
+
+/*
+.dropdown
+{
+    display: inline;
+}
+
+.dropdown button
+{
+    background-color: hsl(0,0%,80%);
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown a{
+    display: block;
+    color: black;
+    text-decoration: none;
+    padding: 10px 15px;
+
+}
+
+.dropdown .content{
+    display: none;
+    position: absolute;
+    min-width: 100px;
+    box-shadow: 2px 2px 5px hsl(0,0%,0%,0.8);
+    background-color: hsl(0,0%,95%);
+}
+
+.dropdown:hover .content
+{
+    display: block;
+
+}
+
+.dropdown:hover button
+{
+    background-color: hsl(0,0%,70%);
+}
+
+.dropdown a:hover
+{
+    background-color: hsl(0,0%,0%,0.8);
+}
 
 */
 
