--- a/html-youtube-tutorial-main/html-youtube-tutorial-main/JS/style.css
+++ b/html-youtube-tutorial-main/html-youtube-tutorial-main/JS/style.css
@@ -30,3 +30,57 @@ body{
     cursor: pointer;
     border-radius: 5px;
 } */
+
+/*
+
+Dice Roller Program:
+
+
+#bdiv
+{
+    text-align: center;
+    font-weight: bold;
+
+}
+
+button
+{
+    padding: 10px 20px;
+    margin: 10px;
+    border-radius: 5px;
+    background-color: blue;
+    color: white;
+    cursor: pointer;
+    border: none;
+    font-weight: bold;
+
+}
+
+button:hover{
+    background-color: rgb(35, 66, 241);
+    color: white;
+}
+
+button:active
+{
+    background-color: rgba(0, 0, 255, 0.89);
+}
+
+input{
+    padding: 10px 20px;
+    margin: 5px;
+    border-radius: 5px;
+    width: 150px;
+    text-align: center;
+}
+
+#dimage img
+{
+    width: 50px;
+    height: 50px;
+}
+ */
+
+
+
+ 
